[package]
name = "twitch-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "4.0.0" # For connecting with Twitch
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros"] } # Required for async
parking_lot = "0.12.0" # For help with async
mki = "0.2.1" # For keyboard controls
mouse-rs = "0.4.1" # For mouse controls